	PR#1439893.

	* src/formats/inchi/Makefile.am, src/formats/inchi/Makefile.in:
	Only install the inchi_api.h header.

	* src/formats/xml/Makefile.am, src/formats/xml/Makefile.in: Turn
	off optimization -- appears to fix crashes on FC4 and FC5,
	PR#1447233.

	* src/formats/xml/xml.h: Add std:: namespace declarations, solving
	compilation problems on some GCC compiler versions.

2006-03-27 Geoffrey Hutchison <babel@geoffhutchison.net>

	* data/atomtyp.txt: IMPVAL for halogen ions.

	* src/formats/smilesformat.cpp: Changes ported from Chris Morley's
	development version. Reject strings with invalid ring bonds.

	* scripts/: Rebuild with SWIG 1.3.29, including several bug fixes
	and faster performance.

	* configure.in, configure: Set version number to 2.0.1.

2006-03-27  Michael Banck  <mbanck@gmx.net>

        * src/fingerprint.h: Fix compilation error with gcc-4.1.
          Patch by <vlaaad@users.sourceforge.net> (PR#1458311).
        * src/formats/copyformat.cpp: Likewise.
        * src/formats/crkformat.cpp: Likewise.
        * src/formats/xml/cmlreactlformat.cpp: Likewise.
        * src/formats/xml/xml.h: Likewise.
        * src/formats/xml/xmlformat.cpp: Likewise.

2006-03-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/Makefile.in : Add @LIBDL@ as
	suggested by Michael Shigorin (PR#1458706). Make sure
	babelconfig.h isn't included in dist tarball, as suggested by
	Michael Banck.

	* scripts/python/setup.py: Fix extension name and remove reference
	to pyopenbabel (used in 2.1) to properly build python extension.

2006-03-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, src/Makefile.am, src/config.h.in: Add
	initial support for DLL builds on Cygwin. Seems to compile a
	libopenbabel.dll, but still linking problems for babel.exe.

	* */Makefile.in: Regenerated using automake.

	* src/main.cpp: Declare USING_OBDLL for Cygwin DLL usage.

	* scripts/*: Build updates for Perl and Python wrappers.
