@@ -121,6 +121,9 @@ AC_SUBST(LIBDL)
 AM_PATH_XML2(2.6.5)
 AM_CONDITIONAL(BUILD_XML, test x"$XML_LIBS" != "x")
 
+AC_CHECK_LIB(inchi, GetINCHI, LIBINCHI="-linchi", LIBINCHI="")
+AM_CONDITIONAL(BUILD_INCHI, test x"$LIBINCHI" == "x")
+
 CHECK_ZLIB
 AC_CHECK_LIB(z, inflateEnd)
 AC_CHECK_HEADERS(zlib.h iconv.h)
